--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -67,7 +67,7 @@ features:
   privacy_pack:
     enable: false
   repository:
-    url: 'https://github.com/<username>/<repository>'
+    url: 'https://github.com/vgilabert94/vgilabert94.github.io'
     content_dir: content
     branch: main
   avatar:
